deploy/apps/grafana/grafana-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana-service
  namespace: monitoring
  labels:
    app.kubernetes.io/name: grafana
    app.kubernetes.io/component: monitoring
    app.kubernetes.io/part-of: noc-observability-pipeline
    environment: monitoring
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: grafana
    environment: monitoring
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
      name: http
